--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-Sobre a Barbearia Alura
 
-Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
+            Medicina.
 
-Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos clientes".
-
-Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
+    A medicina é uma profissão para ajudar proximo até salvar da morte, para se formar nessa profissão é cinco anos ou mais. E o médico, até ser médico se esforça
