--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 
-            Medicina.
+          <!DOCTYPE html>
+          </html> 
+        </h1>Medicina.
 
-    A medicina é uma profissão para ajudar proximo até salvar da morte, para se formar nessa profissão é cinco anos ou mais. E o médico, até ser médico se esforça
+    A medicina é uma profissão que ajuda as pessoas as pessoas a não morrerem, as pessoas na área de trabalho da medicina são
+    formados para ajudar cada pessoa de cada maneira. Tem muitas profissões que trabalham com a área de saúde, além da medicina, por exemplos: fisioterapia , pediatria , dematologia, gestão 
+    hospitalar, medicina esportiva, infectologia, ortopedia, pneumologia, entres outras áreas.
+    A medicina é uma forma das pessoas acharem uma cura para doenças, e um tratamento para ajudar a pessoa ficar melhor.
