--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 
-          <!DOCTYPE html>
-          </html> 
-        </h1>Medicina.
+ <!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+                    <title>Medicina</title>
+        </head>
+        <body>
+   <h1>Medicina.</h1>
 
-    A medicina é uma profissão que ajuda as pessoas as pessoas a não morrerem, as pessoas na área de trabalho da medicina são
-    formados para ajudar cada pessoa de cada maneira. Tem muitas profissões que trabalham com a área de saúde, além da medicina, por exemplos: fisioterapia , pediatria , dematologia, gestão 
+    <p> A <strong>Medicina</strong> é uma profissão que ajuda as pessoas a não morrerem, as pessoas na área de trabalho da <strong>medicina</strong> não
+    formados para ajudar cada pessoa de cada maneira.
+    
+     <p><em>Tem muitas profissões que trabalham com a área de saúde, além da medicina, por exemplos: fisioterapia , pediatria , dematologia, gestão 
     hospitalar, medicina esportiva, infectologia, ortopedia, pneumologia, entres outras áreas.
-    A medicina é uma forma das pessoas acharem uma cura para doenças, e um tratamento para ajudar a pessoa ficar melhor.
+
+     A medicina é uma forma das pessoas acharem uma cura para doenças, e um tratamento para ajudar a pessoa ficar melhor, muitas vezes tem muitas doenças que 
+     a medicina não acha uma forma de ajuda as pessoas.
+    
