--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+ 
  <!DOCTYPE html>
 <html lang="pt-br">
     <head>
@@ -8,12 +8,15 @@
         <body>
    <h1>Medicina.</h1>
 
-    <p> A <strong>Medicina</strong> é uma profissão que ajuda as pessoas a não morrerem, as pessoas na área de trabalho da <strong>medicina</strong> não
+    <p><em>A <strong>Medicina</strong> é uma profissão que ajuda as pessoas a não morrerem, as pessoas na área de trabalho da <strong>medicina</strong> não
     formados para ajudar cada pessoa de cada maneira.
     
      <p><em>Tem muitas profissões que trabalham com a área de saúde, além da medicina, por exemplos: fisioterapia , pediatria , dematologia, gestão 
-    hospitalar, medicina esportiva, infectologia, ortopedia, pneumologia, entres outras áreas.
+    hospitalar, medicina esportiva, infectologia, ortopedia, pneumologia, entres outras áreas</strong>.</em></p>
 
-     A medicina é uma forma das pessoas acharem uma cura para doenças, e um tratamento para ajudar a pessoa ficar melhor, muitas vezes tem muitas doenças que 
+     <p><em> A <strong> medicina </strong> é uma forma das pessoas acharem uma cura para doenças, e um tratamento para ajudar a pessoa ficar melhor, muitas vezes tem muitas doenças que 
      a medicina não acha uma forma de ajuda as pessoas.
-    
+     </body>
+ </html> 
+
+ <img src="banner">
